base/microservice-c/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-c
  labels:
    app: microservice-c
    app.kubernetes.io/name: microservice-c
    app.kubernetes.io/part-of: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-c
      app.kubernetes.io/name: microservice-c
      app.kubernetes.io/part-of: microservices
  template:
    metadata:
      labels:
        app: microservice-c
        app.kubernetes.io/name: microservice-c
        app.kubernetes.io/part-of: microservices
    spec:
      containers:
        - name: microservice-c
          image: nginx:1.19
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
