base/microservice-c/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-c
spec:
  selector:
    app: microservice-c
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
